--- a/templates/home.html
+++ b/templates/home.html
@@ -25,7 +25,7 @@
                         <br><br>
                     </div>
 
-                    <div class="panel-footer"><button>BUY NOW</button> </div>
+                    <div class="panel-footer"><button type="button" class="btn btn-success">BUY NOW</button> </div>
                 </div>
             </div>
             {% endfor %}
