--- a/templates/home.html
+++ b/templates/home.html
@@ -9,7 +9,7 @@
         <div class="row">
             {% for entry in cart_entries %}
             <div class="col-sm-4">
-                <div class="panel panel-primary">
+                <div class="panel panel-success text-center">
                     <div class="panel-heading">%%% SALE %%%</div>
 
                     <div class="panel-body">
@@ -25,7 +25,7 @@
                         <br><br>
                     </div>
 
-                    <div class="panel-footer"><button type="button" class="btn btn-success">BUY NOW</button> </div>
+                    <div class="panel-footer"><button type="button" class="btn btn-success ">BUY NOW</button> </div>
                 </div>
             </div>
             {% endfor %}
