--- a/templates/base.html
+++ b/templates/base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Bootstrap Example</title>
+  <title>online store</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
@@ -25,6 +25,13 @@
       padding: 25px;
     }
 
+  .jumbotron {
+  background-image: url('https://images.unsplash.com/photo-1460353581641-37baddab0fa2?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1171&q=80');
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
+  color:white;
+}
 
 
   </style>
@@ -32,7 +39,7 @@
 <body>
 
 <div class="jumbotron">
-  <div class="container text-center">
+  <div id="title" class="container text-center">
     <h1>Online Store</h1>
     <p>Mission, Vission & Values</p>
   </div>
