--- a/templates/products.html
+++ b/templates/products.html
@@ -33,9 +33,9 @@
                     <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
 
                         <div class="text-center">
-                            <a class="btn w-50 btn-outline-dark mt-auto" href="">Details</a>
+                            <a class="btn w-50 btn-outline-dark mt-auto" href="{% url 'products:detail' post.id %}">Details</a>
 
-                            <a class="btn w-50 btn-outline-dark mt-auto" href="#">Add To Cart</a>
+                            <a class="btn w-50 btn-outline-dark mt-auto" href="">Add To Cart</a>
                         </div>
 
 
