--- a/templates/base.html
+++ b/templates/base.html
@@ -31,7 +31,7 @@
                     <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button"
                        data-bs-toggle="dropdown" aria-expanded="false">Shop</a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" href="{% url 'products' %}">All Products</a></li>
+                        <li><a class="dropdown-item" href="{% url 'products:products' %}">All Products</a></li>
                         <li>
                             <hr class="dropdown-divider"/>
                         </li>
