--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -54,7 +54,7 @@
                     <button type="submit" value="login" class="btn btn-primary btn w-100"
                             style="padding-left: 2.5rem; padding-right: 2.5rem;">Login
                     </button>
-                    <p class="small fw-bold mt-2 pt-1 mb-0">Don't have an account? <a href="{% url 'products:signup' %}"
+                    <p class="small fw-bold mt-2 pt-1 mb-0">Don't have an account? <a href="{% url 'signup' %}"
                                                                                       class="link-danger">Register</a>
                     </p>
                 </div>
