--- a/templates/products/products.html
+++ b/templates/products/products.html
@@ -5,21 +5,40 @@
 {% block content %}
 
 
-<!-- Related items section-->
-<section class="py-5 bg-light">
-    <div class="container px-4 px-lg-5 mt-5">
+<div class="container-fluid card my-8 ">
+    <section class="container">
+        <div class="row">
+            <div class="col-lg-8 mx-auto">
+                <h2 class="text-center mb-4">Our Items</h2>
+                <p class="lead mb-5">We offer a wide variety of high-quality items to suit all your needs. From clothing
+                    to electronics, our selection is sure to have something you'll love.</p>
+                <div class="row">
+                    <div class="col-md-6">
+                        <h3>Clothing</h3>
+                        <p>Our clothing selection includes a range of styles and sizes, from casual wear to formal
+                            attire. Whether you're looking for something comfortable to wear around the house or a dress
+                            for a special occasion, we've got you covered.</p>
+                    </div>
+                    <div class="col-md-6">
+                        <h3>Accessories</h3>
+                        <p>We offer a wide range of accessories to complement your style, including jewelry, bags, and
+                            hats. Our selection is always up-to-date with the latest trends.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
 
-        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 row-cols-xl-12 justify-content-center gx-5 gy-5">
+    <div class="card-body">
+        <div class="product-carousel">
             {% for post in posts %}
             <div class="col mb-5">
                 <div class="card h-100">
                     <!-- Product image-->
-                    {% thumbnail post.image "250x250" crop="center" as im %}
-                    <img class="card-img-top" src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}">
+                    {% thumbnail post.image "400x250" crop="center" as im %}
+                    <img class="card-img-top " src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}">
                     {% endthumbnail %}
-
-
                     <!-- Product details-->
                     <div class="card-body p-4">
                         <div class="text-center">
@@ -31,21 +50,17 @@
                     </div>
                     <!-- Product actions-->
                     <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-
                         <div class="text-center">
                             <a class="btn w-50 btn-outline-dark mt-auto" href="{% url 'products:detail' post.id %}">Details</a>
                         </div>
-
-
                     </div>
                 </div>
             </div>
             {% endfor %}
-
         </div>
-
     </div>
-</section>
+</div>
+
 <!-- Footer-->
 
 
