imageclass for css

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,3 +1,5 @@
+
+
 {% extends 'base.html' %}
 
 
@@ -25,9 +27,9 @@
                 <p class="lead">Some great placeholder content for the first featurette here. Imagine some exciting
                     prose here.</p>
             </div>
-            <div class="col-md-5">
+            <div class="col-md-5 text-center">
 
-                    <img src="../media/happy.jpg"  alt="Your image"  class="img-fluid">
+                    <img src="../static/img/happy.jpg" alt="Your image" class="img-fluid home-images">
 
 
             </div>
@@ -42,8 +44,8 @@
                 <p class="lead">Another featurette? Of course. More placeholder content here to give you an idea of how
                     this layout would work with some actual real-world content in place.</p>
             </div>
-            <div class="col-md-5 order-md-1">
-                <img src="../media/goodvibes.jpg"  alt="Your image"  class="img-fluid">
+            <div class="col-md-5 text-center">
+                <img src="../static/img/goodvibes.jpg" alt="Your image" class="img-fluid home-images">
 
             </div>
         </div>
@@ -57,8 +59,8 @@
                     intended to be actually read, simply here to give you a better view of what this would look like
                     with some actual content. Your content.</p>
             </div>
-            <div class="col-md-5">
-                <img src="../media/weekendsale.jpg"  alt="Your image"  class="img-fluid">
+            <div class="col-md-5 text-center">
+                <img src="../static/img/weekendsale.jpg" alt="Your image" class="img-fluid home-images">
 
             </div>
         </div>
