--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -5,9 +5,10 @@
 }
 
 .home-images {
-    border-radius: 45%;
-    max-width: 1650px;
+    border-radius:5%;
     height: 150px;
+    border:3px solid #000;
+    box-shadow: 6px 6px 60px #33da00;
 
 }
 
@@ -15,7 +16,6 @@
 .text-white-50 {
     color: white !important;
 }
-
 
 
 @media (max-width: 1920px) {
