--- a/templates/home.html
+++ b/templates/home.html
@@ -13,7 +13,7 @@
     ================================================== -->
     <!-- Wrap the rest of the page in another container to center all the content. -->
 
-    <div class="container marketing">
+    <div class="container marketing text-center">
 
 
         <!-- START THE FEATURETTES -->
@@ -29,7 +29,7 @@
             </div>
             <div class="col-md-5 text-center">
 
-                    <img src="../static/img/happy.jpg" alt="Your image" class="img-fluid home-images">
+                    <img src="../static/img/happy.jpg" alt="Your image" class="img-fluid home-images  p-3 mb-5 bg-body ">
 
 
             </div>
@@ -45,7 +45,7 @@
                     this layout would work with some actual real-world content in place.</p>
             </div>
             <div class="col-md-5 text-center">
-                <img src="../static/img/goodvibes.jpg" alt="Your image" class="img-fluid home-images">
+                <img src="../static/img/goodvibes.jpg" alt="Your image" class="img-fluid home-images  p-3 mb-5 bg-body ">
 
             </div>
         </div>
@@ -60,7 +60,7 @@
                     with some actual content. Your content.</p>
             </div>
             <div class="col-md-5 text-center">
-                <img src="../static/img/weekendsale.jpg" alt="Your image" class="img-fluid home-images">
+                <img src="../static/img/weekendsale.jpg" alt="Your image" class="img-fluid home-images  p-3 mb-5 bg-body ">
 
             </div>
         </div>
