box-shadow to allproducts page

--- a/templates/products/allproducts.html
+++ b/templates/products/allproducts.html
@@ -16,7 +16,7 @@
                 <div class="card h-100 ">
                     <!-- Product image-->
                     {% thumbnail post.image "250x250" crop="center" as im %}
-                    <img class="card-img-top " src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}">
+                    <img class="card-img-top all-images " src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}">
                     {% endthumbnail %}
 
 
